js/src/tests/test262/language/import/import-defer/errors/get-other-while-dep-evaluating/dep-2_FIXTURE.js
import
"
.
/
dep
-
3_FIXTURE
.
js
"
;
import
"
.
/
main
.
js
"
;
